tweak menu display to avoid overflow bar

--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ a:active {
 --------------------------------------------------------------*/
 .navigation-area {
     position: absolute;
-    bottom: 10%;
+    bottom: 12%;
     padding: 0.3em 0 0 0.4rem;
     width: 100%;
     z-index: 99999;
